# discuss-agent

./: .gitignore  DESIGN.md  README.md  pyproject.toml
configs/: topic_selection.yaml
discuss_agent/: __init__.py  __main__.py  audit.py  config.py  context.py  engine.py  main.py  models.py  persistence.py  registry.py
discuss_agent/tools/: __init__.py  published.py  research_content.py  research_list.py  trending.py
references/anthropic/: README.md
spec/001-discussion-engine/: spec.md
spec/002-framework-separation/: spec.md
spec/003-runtime-config-flexibility/: spec.md
spec/004-model-api-config/: spec.md
spec/005-prompt-optimization/: spec.md
spec/006-research-pipeline-tuning/: spec.md
tests/: conftest.py  shared.py  test_audit.py  test_config.py  test_context.py  test_engine.py  test_main.py  test_models.py  test_persistence.py  test_registry.py  test_resume.py  test_skills.py  test_tools_init.py  test_tools_published.py  test_tools_research_content.py  test_tools_research_list.py  test_tools_trending.py  test_usage_summary.py
tests/fixtures/test_skill/: SKILL.md
